--- a/components/TOTablePage.html
+++ b/components/TOTablePage.html
@@ -12,9 +12,10 @@
           <label><input type="checkbox" v-model="showOnlyUpgradable" class="ml-2" /> Show Only Upgradable</label>
           <label><input type="checkbox" v-model="showUnbuildable" class="ml-2" /> Show Unbuildable</label>
           <label v-if="showUnbuildable"><input type="checkbox" v-model="showLocked" class="ml-2" /> Show Locked</label>
+          <label><input type="checkbox" v-model="hideAll" class="ml-2" /> hide all</label>
         </div>
-        <div class="tso-building-table column">
-          <div v-for="building in buildings" v-scope="TOBuildingRow({building})"> </div>
+        <div class="tso-building-table column" v-if="!hideAll">
+          <div v-for="building in buildings" :key="building.id" v-scope="TOBuildingRow(building)"></div>
         </div>
       </div>
     </div>
@@ -138,10 +139,10 @@
         </div>
         <div class="tso-row tso-space-between tso-build-col">
           <button class="tso-build-btn tso-row tso-center" v-if="building.buildable && !showOnlyUpgradable"
-            :disabled="!building.reqsMet || biome.freeCount <= 0"><i class="fa fa-hammer tso-build-icon"
+            :disabled="!building.reqsMet || biome.freeCount <= 0" @click="build(building, biome)"><i class="fa fa-hammer tso-build-icon"
               :reqsmet="building.reqsMet"></i></button>
           <button class="tso-build-btn tso-row tso-center" v-if="building.upgradable"
-            :disabled="!building.upgradeReqsMet || biome.count <= 0"><i class="fa fa-arrow-up tso-upgrade-icon"
+            :disabled="!building.upgradeReqsMet || biome.count <= 0" @click="upgrade(building, biome)"><i class="fa fa-arrow-up tso-upgrade-icon"
               :reqsmet="building.upgradeReqsMet"></i></button>
         </div>
 </template>
